operator/gitops/argocd/pipeline-service/tekton-results/watcher-config.yaml
# Adjusting args to tekton-results namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-watcher
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  template:
    spec:
      containers:
        - name: watcher
          resources:
            requests:
              memory: "32Mi"
            limits:
              memory: "64Mi"
          args:
            [
              "-api_addr",
              "tekton-results-api-service.tekton-results.svc.cluster.local:8080",
              "-auth_mode",
              "token",
              "-completed_run_grace_period",
              "10m",
            ]
          securityContext:
            readOnlyRootFilesystem: true
