operator/gitops/argocd/pipeline-service/tekton-results/api-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-results
  namespace: tekton-results
  labels:
    app.kubernetes.io/part-of: tekton-results
  annotations:
    openshift.io/host.generated: "true"
    haproxy.router.openshift.io/hsts_header: "max-age=63072000"
    # https://issues.redhat.com/browse/OCPBUGS-16375
    router.openshift.io/haproxy.health.check.interval: "100d"
    argocd.argoproj.io/sync-wave: "0"
spec:
  to:
    kind: Service
    name: tekton-results-api-service
    weight: 100
  port:
    # tekton-results now supports both REST and gRPC traffic on same port
    targetPort: server
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
